--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         
 
         <a href="http://hitoshitakeuchi.com/blog/deepmountain/" class="image featured">
-            <img src="http://hitoshitakeuchi.com/img/2017/10/pic02.png" alt="" />
+            <img src="http://hitoshitakeuchi.com/img/2017/10/" alt="" />
         </a>
     
 
