--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
 
 <h2 id="introduction">Introduction</h2>
 
+<p>Dates: March 26, Friday, 2018 - Sunday, April 1</p>
+
+<p>Opening hours: 11: 00 - 20: 00</p>
+
+<p>Location: TATARABA / Tataraba</p>
+
+<p>Artist: Shu Isaka, Hitoshi Takeuchi, Wataru Nagano, Issei Yamagata ＊Live: Keisuke Kimoto</p>
+
 <p><a href="https://instagram.com/p/BUuUgsxlWZT/">https://instagram.com/p/BUuUgsxlWZT/</a></p>
 
     </div>
