--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
 <h2 id="introduction">Introduction</h2>
 
-<p>“The Deep Mountain”(VR Installation)</p>
+<p>“The Deep Mountain” (VR Installation, 2018)</p>
 
 <p><a href="https://instagram.com/p/BUuUgsxlWZT/">https://instagram.com/p/BUuUgsxlWZT/</a></p>
 
