--- a/profile/index.html
+++ b/profile/index.html
@@ -29,7 +29,7 @@
 
         <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Profile"/>
 <meta name="twitter:description" content="Media Artist (focus on Digital Image, VR/AR, Stage Simulation, Documentary film)
-My primary interests are exploring the interface between the real and virtual boundaries for images and stage. From ambivalent position of the uncertainty at the level of information and the finite body in a physical situation, I tried to give real and homogeneous evidence to both virtual and real through my works.
+My primary interests are exploring the interface between the real and virtual boundaries for images and stage. From ambivalent position of the uncertainty at the level of information and the finite body in a physical situation, I try to give real and homogeneous evidence to both virtual and real through my works.
 https://www.instagram.com/takeuchihitoshi/
 https://twitter.com/htake_
 [Exhibition|Screening]
@@ -38,7 +38,7 @@ https://twitter.com/htake_
 
         <meta property="og:title" content="Profile" />
 <meta property="og:description" content="Media Artist (focus on Digital Image, VR/AR, Stage Simulation, Documentary film)
-My primary interests are exploring the interface between the real and virtual boundaries for images and stage. From ambivalent position of the uncertainty at the level of information and the finite body in a physical situation, I tried to give real and homogeneous evidence to both virtual and real through my works.
+My primary interests are exploring the interface between the real and virtual boundaries for images and stage. From ambivalent position of the uncertainty at the level of information and the finite body in a physical situation, I try to give real and homogeneous evidence to both virtual and real through my works.
 https://www.instagram.com/takeuchihitoshi/
 https://twitter.com/htake_
 [Exhibition|Screening]
@@ -65,7 +65,7 @@ https://twitter.com/htake_
         
 <meta itemprop="name" content="Profile">
 <meta itemprop="description" content="Media Artist (focus on Digital Image, VR/AR, Stage Simulation, Documentary film)
-My primary interests are exploring the interface between the real and virtual boundaries for images and stage. From ambivalent position of the uncertainty at the level of information and the finite body in a physical situation, I tried to give real and homogeneous evidence to both virtual and real through my works.
+My primary interests are exploring the interface between the real and virtual boundaries for images and stage. From ambivalent position of the uncertainty at the level of information and the finite body in a physical situation, I try to give real and homogeneous evidence to both virtual and real through my works.
 https://www.instagram.com/takeuchihitoshi/
 https://twitter.com/htake_
 [Exhibition|Screening]
@@ -251,7 +251,7 @@ https://twitter.com/htake_
 
 <p>My primary interests are exploring the interface between the real and virtual boundaries for images and stage.
 From ambivalent position of the uncertainty at the level of information and the finite body in a physical situation,
-I tried to give real and homogeneous evidence to both virtual and real through my works.</p>
+I try to give real and homogeneous evidence to both virtual and real through my works.</p>
 
 <p><a href="https://www.instagram.com/takeuchihitoshi/">https://www.instagram.com/takeuchihitoshi/</a></p>
 
