--- a/profile/index.html
+++ b/profile/index.html
@@ -252,7 +252,7 @@ I try to give real and homogeneous evidence to both virtual and real through my 
 
 <p>[Exhibition|Screening]</p>
 
-<p>‘18 ・フジタ・トリビュート, 東京藝術大学陳列館　東京都美術館|東京　※美術：小沢剛　映像：竹内均</p>
+<p>‘18 ・1940&rsquo;s フジタ・トリビュート, 東京藝術大学大学美術館・陳列館|東京　※美術：小沢剛　映像：竹内均</p>
 
 <p>‘18 ・すべてを球くして去る波, TATARABA Gallery|東京</p>
 
@@ -262,7 +262,7 @@ I try to give real and homogeneous evidence to both virtual and real through my 
 
 <p>‘14 ・ポンピドゥーセンター公式映像フェスティバル オールピスト東京, アンスティチュフランセ東京|東京</p>
 
-<p>‘14 ・マテリアライジング展Ⅱ, 東京藝術大学陳列館|東京</p>
+<p>‘14 ・マテリアライジング展Ⅱ, 東京藝術大学大学美術館・陳列館|東京</p>
 
 <p>‘14 ・藝大アーツ･スペシャル, 東京藝術大学奏楽堂|東京</p>
 
