--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         
 
         <a href="http://hitoshitakeuchi.com/blog/deepmountain/" class="image featured">
-            <img src="date2017/10/" alt="" />
+            <img src="http://hitoshitakeuchi.com/img/2017/10/" alt="" />
         </a>
     
 
@@ -599,7 +599,7 @@
                         <article>
                             <header>
                                 <a href="http://hitoshitakeuchi.com/categories/work/">WORK</a>
-                                <span style="float:right;">9</span>
+                                <span style="float:right;">8</span>
                             </header>
                         </article>
                     </li>
