--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
 
 <p><a href="https://www.instagram.com/p/Bms0mQUlsrV/?taken-by=takeuchihitoshi">https://www.instagram.com/p/Bms0mQUlsrV/?taken-by=takeuchihitoshi</a></p>
 
+<p><a href="https://www.youtube.com/watch?v=eL2eWBe1Hnw">https://www.youtube.com/watch?v=eL2eWBe1Hnw</a></p>
+
 <p><a href="https://www.facebook.com/mmuummeeii/">https://www.facebook.com/mmuummeeii/</a></p>
 
 <p>Dates: September 28, 2018 - October 1</p>
