--- a/profile/index.html
+++ b/profile/index.html
@@ -248,7 +248,7 @@ I try to give real and homogeneous evidence to both real and virtual through my 
 
 <p>[Exhibition|Screening]</p>
 
-<p>‘18 ・Nomadic Grid, mumei|東京</p>
+<p>‘18 ・Nomadic Grids, mumei|東京</p>
 
 <p>‘18 ・1940&rsquo;s フジタ・トリビュート, 東京藝術大学大学美術館・陳列館|東京　※美術：小沢剛　映像：竹内均</p>
 
