--- a/profile/index.html
+++ b/profile/index.html
@@ -29,7 +29,7 @@
 
         <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Profile"/>
 <meta name="twitter:description" content="Media Artist (focus on Digital Image, Installation, VR/AR)
-My primary interests are exploring the interface between the landscape and the picturesque. I try to give reality and homogeneous evidence to both real and virtual through my works. Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan.
+Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan. My primary interests are exploring the interface between the landscape and the picturesque. I try to give reality and homogeneous evidence to both real and virtual through my works.
 https://www.instagram.com/takeuchihitoshi/
 https://twitter.com/htake_
 [Exhibition|Screening]
@@ -41,7 +41,7 @@ https://twitter.com/htake_
 
         <meta property="og:title" content="Profile" />
 <meta property="og:description" content="Media Artist (focus on Digital Image, Installation, VR/AR)
-My primary interests are exploring the interface between the landscape and the picturesque. I try to give reality and homogeneous evidence to both real and virtual through my works. Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan.
+Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan. My primary interests are exploring the interface between the landscape and the picturesque. I try to give reality and homogeneous evidence to both real and virtual through my works.
 https://www.instagram.com/takeuchihitoshi/
 https://twitter.com/htake_
 [Exhibition|Screening]
@@ -71,7 +71,7 @@ https://twitter.com/htake_
         
 <meta itemprop="name" content="Profile">
 <meta itemprop="description" content="Media Artist (focus on Digital Image, Installation, VR/AR)
-My primary interests are exploring the interface between the landscape and the picturesque. I try to give reality and homogeneous evidence to both real and virtual through my works. Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan.
+Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan. My primary interests are exploring the interface between the landscape and the picturesque. I try to give reality and homogeneous evidence to both real and virtual through my works.
 https://www.instagram.com/takeuchihitoshi/
 https://twitter.com/htake_
 [Exhibition|Screening]
@@ -258,9 +258,9 @@ https://twitter.com/htake_
             <div id="content">
                 <p>Media Artist (focus on Digital Image, Installation, VR/AR)</p>
 
-<p>My primary interests are exploring the interface between the landscape and the picturesque.
-I try to give reality and homogeneous evidence to both real and virtual through my works.
-Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan.</p>
+<p>Born 1985 in Tokyo, Japan. Bachelor of Intermedia Art. Tokyo University of the Arts, Japan.
+My primary interests are exploring the interface between the landscape and the picturesque.
+I try to give reality and homogeneous evidence to both real and virtual through my works.</p>
 
 <p><a href="https://www.instagram.com/takeuchihitoshi/">https://www.instagram.com/takeuchihitoshi/</a></p>
 
