--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         
 
         <a href="http://hitoshitakeuchi.com/blog/nomadicaiagents/" class="image featured">
-            <img src="http://hitoshitakeuchi.com/img/2018/10/" alt="" />
+            <img src="date/" alt="" />
         </a>
     
 
