--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         
 
         <a href="http://hitoshitakeuchi.com/blog/nomadicaiagents/" class="image featured">
-            <img src="date/" alt="" />
+            <img src="http://hitoshitakeuchi.com/img/2018/10/" alt="" />
         </a>
     
 
@@ -311,6 +311,13 @@
 <h2 id="introduction">Introduction</h2>
 
 <p>“Nomadic AI Agents” (Installation, 2018)</p>
+
+<p>Nomadic AI Agents are practically useless AI agents.
+The framework uses ML-Agents, a machine learning environment of Unity which is a game engine.
+Through the learning Python script, the library TensorFlow for machine learning and the executable file created by Unity are linked to simulate,
+learn the action of ball agent entering into the box while using obstacles in the scene,
+it will start acting as if its will lived.
+In a sense, being able to learn by machine learning is unexpectedly.</p>
 
 <p><a href="https://www.instagram.com/p/BoQREZyFLUI/?taken-by=takeuchihitoshi">https://www.instagram.com/p/BoQREZyFLUI/?taken-by=takeuchihitoshi</a></p>
 
