--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 and I am planning an online research project that relates to art for personal space.
 It&rsquo;s a project where people from various fields can introduce their papers, read books, and present their works.</p>
 
-<p><a href="http://artresearchonline.com">http://artresearchonline.com</a></p>
+<p><a href="https://www.artresearchonline.com">https://www.artresearchonline.com</a></p>
 
 <p>＜“A Pale View of Shibuya River” (Installation, 2019)＞</p>
 
