--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         
 
         <a href="http://hitoshitakeuchi.com/blog/works/" class="image featured">
-            <img src="http://hitoshitakeuchi.com/img/2020/03/" alt="" />
+            <img src="date/" alt="" />
         </a>
     
 
