--- a/404.html
+++ b/404.html
@@ -267,7 +267,7 @@
 
 
 
-<li><a href="//facebook.com/hitoshi.takeuchi.9216" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
+<li><a href="//facebook.com/hitoshi.takeuchi.info" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
 
 
 
@@ -444,7 +444,7 @@
 
 
 
-<li><a href="//facebook.com/hitoshi.takeuchi.9216" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
+<li><a href="//facebook.com/hitoshi.takeuchi.info" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
 
 
 
