--- a/profile/index.html
+++ b/profile/index.html
@@ -367,7 +367,7 @@ In the unique conditions of media technologies, I present a variety of works tha
 
 
 
-<li><a href="//facebook.com/hitoshi.takeuchi.9216" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
+<li><a href="//facebook.com/hitoshi.takeuchi.info" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
 
 
 
@@ -541,7 +541,7 @@ In the unique conditions of media technologies, I present a variety of works tha
 
 
 
-<li><a href="//facebook.com/hitoshi.takeuchi.9216" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
+<li><a href="//facebook.com/hitoshi.takeuchi.info" target="_blank" title="Facebook" class="fa fa-facebook"></a></li>
 
 
 
