--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         
 
         <a href="http://hitoshitakeuchi.com/blog/the-essay-film/" class="image featured">
-            <img src="http://hitoshitakeuchi.com/img//" alt="" />
+            <img src="date2021/12/" alt="" />
         </a>
     
 
